
set(TT_DNN_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/auto_format.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/data_transfer/data_transfer_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/layout_conversion/layout_conversion_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/all_gather/all_gather_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/all_gather/multi_core/all_gather_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/sharded/sharded_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/sharded/multi_core/sharded_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/sharded_partial/sharded_op_partial.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/sharded_partial/multi_core/sharded_op_partial_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/copy/copy_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/copy/single_core/copy_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/copy/multi_core/copy_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/move/move_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/move/single_core/move_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/move/multi_core/move_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/move/multi_core/move_op_multi_core_overlap.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/move/multi_core/move_op_multi_core_sharded.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/eltwise_binary/eltwise_binary_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/eltwise_binary/single_core/eltwise_binary_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/eltwise_binary/multi_core/eltwise_binary_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/eltwise_unary/eltwise_unary_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/eltwise_unary/single_core/eltwise_unary_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/eltwise_unary/multi_core/eltwise_unary_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/eltwise_unary/multi_core/eltwise_unary_op_sharded.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/pad/pad_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/pad/pad_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/unpad/single_core/unpad_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/unpad/multi_core/unpad_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/unpad/unpad_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/indexed_fill/multi_core/indexed_fill_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/indexed_fill/indexed_fill_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/non_zero_indices/single_core/non_zero_indices_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/non_zero_indices/non_zero_indices_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/fill_rm/fill_rm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/fully_connected/fully_connected_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/pool/average_pool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/pool/max_pool.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/pool/max_pool_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/pool/max_pool_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transpose/transpose_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transpose/wh_multi_core/transpose_wh_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transpose/hc_multi_core/transpose_hc_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transpose/single_core/transpose_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/reduce/reduce_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/reduce/single_core/reduce_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/reduce/multi_core_h/reduce_op_multi_core_h.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/reduce/multi_core_w/reduce_op_multi_core_w.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bcast/bcast_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bcast/single_core/bcast_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bcast/multi_core_h/bcast_op_multi_core_h.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bcast/multi_core_w/bcast_op_multi_core_w.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bcast/multi_core_hw/bcast_op_multi_core_hw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/bmm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/single_core/bmm_op_single_core_tilize_untilize.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/single_core/bmm_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/multi_core/bmm_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/multi_core_reuse/bmm_op_multi_core_reuse.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/multi_core_reuse_padding/bmm_op_multi_core_reuse_padding.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/multi_core_reuse_mcast_1d_optimized/bmm_op_multi_core_reuse_mcast_1d_optimized.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/multi_core_reuse_mcast_2d_optimized/bmm_op_multi_core_reuse_mcast_2d_optimized.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/bmm/multi_core_reuse_optimized/bmm_op_multi_core_reuse_optimized.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/downsample/downsample_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/conv/conv_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/conv/optimized_conv_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/conv/multi_core_optimized_conv/optimized_conv_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/conv/multi_core_optimized_conv_sharded/optimized_conv_op_sharded.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/conv/multi_core_optimized_conv_sharded/optimized_conv_op_sharded_v2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/tilize/tilize_multi_core/tilize_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/tilize/tilize_single_core/tilize_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/tilize/tilize_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/untilize/multi_core/untilize_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/untilize/single_core/untilize_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/untilize/untilize_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/untilize/untilize_with_halo_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/untilize/untilize_with_halo_op_v2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/softmax/multi_core/softmax_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/softmax/softmax_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_helper_functions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_adam/moreh_adam.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_adam/moreh_adam_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_adamw/moreh_adamw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_adamw/moreh_adamw_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_arange/moreh_arange_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_clip_grad_norm/moreh_clip_grad_norm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_clip_grad_norm/moreh_clip_grad_norm_step1/moreh_clip_grad_norm_step1.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_clip_grad_norm/moreh_clip_grad_norm_step2/moreh_clip_grad_norm_step2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_clip_grad_norm/moreh_clip_grad_norm_step3/moreh_clip_grad_norm_step3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_nll_loss/moreh_nll_loss_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_nll_loss/moreh_nll_loss_step1/moreh_nll_loss_step1.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_nll_loss/moreh_nll_loss_step2/moreh_nll_loss_step2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_nll_loss_backward/moreh_nll_loss_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_nll_loss_backward/moreh_nll_loss_backward/moreh_nll_loss_backward.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax/moreh_softmax_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax/softmax_w_small/softmax_w_small.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax/softmax_h_small/softmax_h_small.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax/softmax_w_large/softmax_w_large.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax/softmax_h_large/softmax_h_large.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax/softmax_c_large/softmax_c_large.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax_backward/moreh_softmax_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax_backward/softmax_backward_w_small/softmax_backward_w_small.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax_backward/softmax_backward_h_small/softmax_backward_h_small.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax_backward/softmax_backward_w_large/softmax_backward_w_large.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax_backward/softmax_backward_h_large/softmax_backward_h_large.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_softmax_backward/softmax_backward_c_large/softmax_backward_c_large.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_sum/moreh_sum_h/moreh_sum_h.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_sum/moreh_sum_w/moreh_sum_w.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_sum/moreh_sum_nc/moreh_sum_nc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_sum/moreh_sum_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_sum_backward/moreh_sum_backward.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_sum_backward/moreh_sum_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_mean/moreh_mean_h/moreh_mean_h.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_mean/moreh_mean_w/moreh_mean_w.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_mean/moreh_mean_nc/moreh_mean_nc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_mean/moreh_mean_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_mean_backward/moreh_mean_backward.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_mean_backward/moreh_mean_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/layernorm/multi_core/layernorm_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/layernorm/layernorm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_bmm/moreh_bmm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_bmm_backward/moreh_bmm_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_linear/moreh_linear_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_linear_backward/moreh_linear_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_linear_backward/bias_backward_h/moreh_bias_backward_multi_core_h.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_linear_backward/bias_backward_hw/moreh_bias_backward_single_core_hw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_matmul/multi_core/moreh_matmul_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_matmul/moreh_matmul_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_matmul_backward/moreh_matmul_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_norm/moreh_norm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_norm/moreh_norm_h/moreh_norm_h.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_norm/moreh_norm_w/moreh_norm_w.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_norm/moreh_norm_other/moreh_norm_other.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_norm_backward/moreh_norm_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_norm_backward/moreh_norm_backward.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_dot/single_core/moreh_dot_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_dot/moreh_dot_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_dot_backward/single_core/moreh_dot_backward_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_dot_backward/moreh_dot_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_layernorm/moreh_layernorm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_layernorm_backward/moreh_layernorm_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_layernorm_backward/input_grad/moreh_layernorm_backward_input_grad.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_layernorm_backward/gamma_beta_grad/moreh_layernorm_backward_gamma_beta_grad.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_groupnorm/moreh_groupnorm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_groupnorm/moreh_groupnorm.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_groupnorm_backward/moreh_groupnorm_backward_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_groupnorm_backward/input_grad/moreh_groupnorm_backward_input_grad.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_groupnorm_backward/gamma_beta_grad/moreh_groupnorm_backward_gamma_beta_grad.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_cumsum/moreh_cumsum_nc/moreh_cumsum_nc.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_cumsum/moreh_cumsum_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_sgd/moreh_sgd_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_sgd/moreh_sgd.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/groupnorm/groupnorm_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/reshape/reshape_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/permute/permute_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/composite/composite_ops.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/backward/backward_ops.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/optimizer/optimizer_ops.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/complex/complex_ops.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/loss/loss_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transformer_tms/transformer_tms.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transformer_tms/multi_core_split_query_key_value_and_split_heads/multi_core_split_query_key_value_and_split_heads.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transformer_tms/multi_core_concatenate_heads/multi_core_concatenate_heads.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transformer_tms/multi_core_attn_matmul/multi_core_attn_matmul.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/transformer_tms/multi_core_group_attn_matmul/multi_core_group_attn_matmul.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/run_operation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/split/split_tiled.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/split/split_last_dim_two_chunks_tiled.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/operation_history.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/concat/multi_core/concat_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/concat/single_core/concat_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/concat/concat_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/repeat/multi_core/repeat_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/repeat/single_core/repeat_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/repeat/repeat_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/nlp_tms/nlp_tms.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/nlp_tms/nlp_create_qkv_heads_falcon7b.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/nlp_tms/nlp_create_qkv_heads.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/nlp_tms/nlp_concat_heads.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/rotate_half/single_core/rotate_half_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/rotate_half/rotate_half_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/rotary_embedding/multi_core/rotary_embedding_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/rotary_embedding/single_core/rotary_embedding_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/rotary_embedding/rotary_embedding_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/embeddings/embeddings_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/update_cache/multi_core/update_cache_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/update_cache/single_core/update_cache_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/update_cache/update_cache_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/upsample/multi_core/upsample_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/upsample/single_core/upsample_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/upsample/upsample_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/fold/fold_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/fold/single_core/fold_op_single_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/fold/multi_core/fold_op_multi_core.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_getitem/moreh_getitem_op.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_getitem/moreh_getitem_rm/moreh_getitem_rm.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/op_library/moreh_getitem/moreh_getitem_tilized/moreh_getitem_tilized.cpp
)

add_library(tt_dnn SHARED ${TT_DNN_SRCS})

target_link_libraries(tt_dnn PUBLIC dtx tt_metal_libs)
target_include_directories(tt_dnn PUBLIC
                            ${UMD_HOME}
                            ${CMAKE_SOURCE_DIR}
                            ${CMAKE_SOURCE_DIR}/tt_metal
                            ${CMAKE_SOURCE_DIR}/tt_eager
                            ${CMAKE_CURRENT_SOURCE_DIR}
)
# target_compile_options(tt_dnn PUBLIC ${METAL_COMPILE_OPTIONS} -Wno-int-to-pointer-cast)
# target_compile_options(tt_dnn PUBLIC -Wno-int-to-pointer-cast)
